kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: talentiq-service
  namespace: talentiq

spec:

  selector:
    app: talentiq

  ports:
  - port: 8501
    targetPort: 8501

  type: NodePort
